[gd_scene load_steps=4 format=3 uid="uid://tgojdfrg68r"]

[ext_resource type="Script" path="res://Scripts/save_card_script.gd" id="1_8sinb"]
[ext_resource type="Theme" uid="uid://dfeo3ebchf3ul" path="res://Resources/Themes/Default_Theme.tres" id="2_6r23q"]
[ext_resource type="FontFile" uid="uid://b6qn4wet6lij7" path="res://Resources/Fonts/dogica/OTF/dogicabold.otf" id="3_co845"]

[node name="SaveCard" type="Node2D"]
script = ExtResource("1_8sinb")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 634.0
offset_bottom = 111.0
color = Color(0.533037, 0.533037, 0.533037, 1)

[node name="Game_Name" type="Label" parent="ColorRect"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_right = 553.0
offset_bottom = 28.0
theme = ExtResource("2_6r23q")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Game name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="ColorRect"]
texture_filter = 1
layout_mode = 0
offset_left = 10.0
offset_top = 15.0
offset_right = 137.0
offset_bottom = 101.0
theme = ExtResource("2_6r23q")
theme_override_font_sizes/font_size = 16
text = "Load Save"
autowrap_mode = 3

[node name="SD" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 0
offset_left = 145.0
offset_top = 42.0
offset_right = 225.0
offset_bottom = 65.0
scale = Vector2(1.125, 1.125)
theme = ExtResource("2_6r23q")
theme_override_font_sizes/font_size = 8
text = "Save date:"

[node name="Save_Date" type="Label" parent="ColorRect/SD"]
texture_filter = 1
layout_mode = 0
offset_left = 83.0
offset_right = 188.0
offset_bottom = 23.0
scale = Vector2(1.125, 1.125)
theme = ExtResource("2_6r23q")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_co845")
theme_override_font_sizes/font_size = 8
text = "YYYY_MM_DD"

[node name="PT" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 0
offset_left = 145.0
offset_top = 65.0
offset_right = 217.0
offset_bottom = 88.0
scale = Vector2(1.125, 1.125)
theme = ExtResource("2_6r23q")
theme_override_font_sizes/font_size = 8
text = "Playtime:"

[node name="Play_Time" type="Label" parent="ColorRect/PT"]
texture_filter = 1
layout_mode = 0
offset_left = 75.0
offset_right = 127.0
offset_bottom = 23.0
scale = Vector2(1.125, 1.125)
theme = ExtResource("2_6r23q")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_co845")
theme_override_font_sizes/font_size = 8
text = "MM:SS"

[node name="SN" type="Label" parent="ColorRect"]
texture_filter = 1
layout_mode = 0
offset_left = 354.0
offset_top = 63.0
offset_right = 426.0
offset_bottom = 86.0
scale = Vector2(1.125, 1.125)
theme = ExtResource("2_6r23q")
theme_override_font_sizes/font_size = 8
text = "Save No.:"

[node name="Save_Number" type="Label" parent="ColorRect/SN"]
texture_filter = 1
layout_mode = 0
offset_left = 75.0
offset_right = 115.0
offset_bottom = 23.0
scale = Vector2(1.125, 1.125)
theme = ExtResource("2_6r23q")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_co845")
theme_override_font_sizes/font_size = 8
text = "0"

[node name="Save" type="Button" parent="ColorRect"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 509.0
offset_top = 67.0
offset_right = 622.0
offset_bottom = 101.0
theme = ExtResource("2_6r23q")
theme_override_font_sizes/font_size = 8
disabled = true
text = "Save to Cloud"
autowrap_mode = 3

[node name="Delete" type="Button" parent="ColorRect"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 509.0
offset_top = 15.0
offset_right = 622.0
offset_bottom = 53.0
theme = ExtResource("2_6r23q")
theme_override_font_sizes/font_size = 8
text = "Delete Save"
autowrap_mode = 3

[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="ColorRect/Delete" to="." method="_on_delete_pressed"]
